prettier-plugin-sentences-per-line

--- a/packages/site/src/content/docs/engines/stratum/faqs.mdx
+++ b/packages/site/src/content/docs/engines/stratum/faqs.mdx
@@ -13,7 +13,7 @@ That's thematically tied to how the engine works:
 - [Presets](/engines/stratum/concepts/presets) group together structures into usable layers of tooling
 
 It also looks and sounds sophisticated.
-_"Stratum"_.
+*"Stratum"*.
 
 ## Why can't we define Addons for Blocks in Presets?
 
