--- a/packages/site/src/content/docs/engines/stratum/packages/bingo-stratum-testers.mdx
+++ b/packages/site/src/content/docs/engines/stratum/packages/bingo-stratum-testers.mdx
@@ -5,7 +5,8 @@ title: bingo-stratum-testers
 
 import { PackageManagers } from "starlight-package-managers";
 
-Test utilities for Stratum Blocks and Presets. 🧑‍🔧
+Test utilities for Stratum Blocks and Presets.
+🧑‍🔧
 
 <PackageManagers type="add" pkg="bingo-stratum-testers" dev />
 
