--- a/packages/site/src/content/docs/engines/stratum/packages/bingo-stratum.mdx
+++ b/packages/site/src/content/docs/engines/stratum/packages/bingo-stratum.mdx
@@ -5,7 +5,8 @@ title: bingo-stratum
 
 import { PackageManagers } from "starlight-package-managers";
 
-Highly composable, customizable templating engine for Bingo. 🏭
+Highly composable, customizable templating engine for Bingo.
+🏭
 
 <PackageManagers type="add" pkg="bingo-stratum" />
 
